--- a/MathematicalBasics/Ba.tex
+++ b/MathematicalBasics/Ba.tex
@@ -320,7 +320,7 @@ The converse is also true, every Lie algebroid with zero anchor is a bundle of L
 As argued in \cite[Theorem 6.4.5; page 238f.]{mackenzieGeneralTheory}, when the Lie algebras of each fibre of a bundle of Lie algebras are isomorphic to each as Lie algebras, then we denote that as \textbf{Lie algebra bundle} (in short \textbf{LAB}).
 
 \begin{definitions}{Lie algebra bundle (LAB), \cite[Definition 3.3.8; page 104]{mackenzieGeneralTheory}}{LAB}
-Let $\mathfrak{g}$ be a Lie algebra. A \textbf{Lie algebra bundle}, or \textbf{\gls{LAB}}, is a vector bundle $K \to N$ equipped with a field of Lie algebra brackets $\mleft[ \cdot, \cdot \mright]_{\mathfrak{g}}: \Gamma(K) \times \Gamma(K) \to \Gamma(K)$, \textit{i.e.} $\mleft[ \cdot, \cdot \mright]_{\mathfrak{g}} \in \Gamma\mleft(\bigwedge^2 K^* \otimes K \mright)$ such that it restricts to a Lie algebra bracket on each fibre, and such that $K$ admits an \textbf{LAB atlas $\{ \psi_i: K|_{U_i} \to U_i \times \mathfrak{g} \}$ of LAB charts} subordinate to some open covering $\mleft( U_i \mright)_i$ of $N$, that is, an atlas such that each induced map $\psi_{i, p}: K_p \to \mathfrak{g}$ is a Lie algebra isomorphism, where $p \in U_i$, $K_p$ the fiber at $p$, $\psi_{i, p} \coloneqq \mathrm{pr}_2 \circ \mleft.\psi_i\mright|_{K_p}$ and $\mathrm{pr}_2$ is the projection onto the second factor.
+Let $\mathfrak{g}$ be a Lie algebra. A \textbf{Lie algebra bundle}, or \textbf{\gls{LAB}}, is a vector bundle $K \to N$ equipped with a field of Lie algebra brackets $\mleft[ \cdot, \cdot \mright]_{\mathfrak{g}}: \Gamma(K) \times \Gamma(K) \to \Gamma(K)$, \textit{i.e.}\ $\mleft[ \cdot, \cdot \mright]_{\mathfrak{g}} \in \Gamma\mleft(\bigwedge^2 K^* \otimes K \mright)$ such that it restricts to a Lie algebra bracket on each fibre, and such that $K$ admits an \textbf{LAB atlas $\{ \psi_i: K|_{U_i} \to U_i \times \mathfrak{g} \}$ of LAB charts} subordinate to some open covering $\mleft( U_i \mright)_i$ of $N$, that is, an atlas such that each induced map $\psi_{i, p}: K_p \to \mathfrak{g}$ is a Lie algebra isomorphism, where $p \in U_i$, $K_p$ the fiber at $p$, $\psi_{i, p} \coloneqq \mathrm{pr}_2 \circ \mleft.\psi_i\mright|_{K_p}$ and $\mathrm{pr}_2$ is the projection onto the second factor.
 \end{definitions}
 
 We are going to discuss those later in more detail. For gauge theory the following example is of special importance, and this example emphasizes why we are interested into Lie algebroids.
