--- a/PhysicalBasics/PhysicalBasics.tex
+++ b/PhysicalBasics/PhysicalBasics.tex
@@ -358,7 +358,7 @@ As before, we can conclude that we can find a curve $A$ for all $\mathcal{a} \in
 
 Think of $(\mathcal{v}, \mathcal{a})$ again as candidates for the infinitesimal gauge transformations, for which we wrote $(\delta \Phi, \delta A)$ in Chapter \ref{ClassicGaugeTheory}; also recall Remark \ref{rem:TangentSpaceOfMathfrakMg}. But other than in Remark \ref{rem:TangentSpaceOfMathfrakMg} we cannot assume canonical flat connections now which is why the last result shows that we cannot view $(\mathcal{v}, \mathcal{a})$ as an element of $\mathfrak{M}_E(M;N)$ in general, thus, we changed the notation to $(\mathcal{v}, \mathcal{a})$ for now. So, we do not have any canonical horizontal distribution given, and therefore let us study the vertical structure first.
 
-Recall that there is the notion of a \textbf{vertical bundle} for fibre bundles $F \stackrel{\pi}{\to} N$ (as \textit{e.g.}~introduced in \cite[\S 5.1.1, for principal bundles, but it is straightforward to extend the definitions]{hamilton}), which is defined as a subbundle $\gls{VF}$ of the tangent bundle $\mathrm{T}F \to F$ given as the kernel of $\mathrm{D}\pi : \mathrm{T}F \to \mathrm{T}N$. The fibres $\mathrm{V}_eF$ of $F$ at $e \in F$ are then given by 
+Recall that there is the notion of a \textbf{vertical bundle} for fibre bundles $F \stackrel{\pi}{\to} N$ (as \textit{e.g.}~introduced in \cite[\S 5.1.1, for principal bundles, but it is straightforward to extend the definitions; page 258ff.]{hamilton}), which is defined as a subbundle $\gls{VF}$ of the tangent bundle $\mathrm{T}F \to F$ given as the kernel of $\mathrm{D}\pi : \mathrm{T}F \to \mathrm{T}N$. The fibres $\mathrm{V}_eF$ of $F$ at $e \in F$ are then given by 
 \bas
 \mathrm{V}_e F
 &=
