further errors and mistakes

--- a/MathematicalBasics/Ba.tex
+++ b/MathematicalBasics/Ba.tex
@@ -518,7 +518,7 @@ Writing $\mathbb{C}^2 \ni \omega \coloneqq \begin{pmatrix} \omega^1 \\ \omega^2 
 \\
 \gamma\mleft(\beta_4\mright)_\omega
 &\coloneqq
-\frac{g^\prime}{2} ~ \mleft.\mleft( x^1 \partial_1 + x^2 \partial_2 + x^3 \partial_3 + x^4 \partial_4 \mright)\mright|_\omega,
+\frac{g^\prime}{2} ~ \mleft.\mleft( x^2 \partial_1 - x^1 \partial_2 + x^4 \partial_3 - x^3 \partial_4 \mright)\mright|_\omega,
 \eas
 which is induced by the Lie algebra representation introduced in Ex.~\ref{ex:electroweakinteractionasLiealg}, hence, it defines an action Lie algebroid.
 \end{examples}
