--- a/PhysicalBasics/PhysicalBasics.tex
+++ b/PhysicalBasics/PhysicalBasics.tex
@@ -4224,7 +4224,7 @@ $\bullet$ As usual we use again Cor.~\ref{cor:StandardTheory}, for this assume t
 =
 \mleft( \mleft[ \varepsilon, F \mright]_{\mathfrak{g}} \mright)^a
 \eas
-for $\mleft( e_a \mright)_a$ a constant frame. This is again precisely the expected formula, recall Prop.~\ref{prop:ClassicGaugeTrafoOfFieldStrengthAndMinimalCoupling}, and this is also shown and argued in \cite[see the second paragraph after Eq.~(11), keep in mind that the different sign for $\varepsilon$]{CurvedYMH}, where also the general formula with the curvature got stated, but again only for the components without knowing the full tensor. 
+for $\mleft( e_a \mright)_a$ a constant frame. This is again precisely the expected formula, recall Prop.~\ref{prop:ClassicGaugeTrafoOfFieldStrengthAndMinimalCoupling}, and this is also shown and argued in \cite[see the second paragraph after Eq.~(11), keep in mind that there is a different sign for $\varepsilon$]{CurvedYMH}, where also the general formula with the curvature got stated, but again only for the components without knowing the full tensor. 
 %
 %Finally, observe in the general situation that when we would rewrite the formula using $\delta^{(1)}$ instead (recall the discussion around Def.~\ref{def:TotalInfinGaugeTransform}) such that $\delta_\varepsilon^{(1)} F^a = \delta_\varepsilon F^a$, then we get, using the previous calculations,
 %\bas
@@ -4380,7 +4380,7 @@ When we would use $\nabla_\rho$ to define the gauge transformations of $E$-value
 First recall Thm.~\ref{thm:ActionLieALgebroid}, especially, the canonical flat connection satisfies $R_\nabla^{\mathrm{bas}}=0$; the metric compatibilities follow by Lemma \ref{lem:MetricCompsAdInvUndLieAlgebraRepSymm}, hence, all compatibility conditions of Thm.~\ref{thm:GaugeInvariantStandardLagrangian} are satisfied. That the formulas restrict to the standard ones we have discussed in Cor.~\ref{cor:StandardTheory} and \ref{cor:EichtrafovonDAPHIinClassicIstBabyEinfach}, and Remarks \ref{RemUeberVariationVonHiggs}, \ref{RemDifferentVersionsOfGaugeTrafos}, and \ref{RemVergleicheVonVariationenVonFUndDAPhi}.
 \end{proof}
 
-But due to the compatibility condition about the flatness we arrive locally now at an action Lie algebroid, regardless of the specific choice of $E$; and as we have seen multiple times, action Lie algebroids recovers the classical theory.
+But due to the compatibility condition about the flatness we arrive locally now at an action Lie algebroid, regardless of the specific choice of $E$; and as we have seen multiple times, action Lie algebroids recover the classical theory.
 
 \begin{corollaries}{Gauge invariance implies standard theory, \newline \cite[the discussion around Eq.~(9)ff.]{CurvedYMH}}{ManBrauchZetaWahrscheinlich}
 Let us have the same conditions as in Thm.~\ref{thm:GaugeInvariantStandardLagrangian}. Then $E$ is locally isomorphic to an action Lie algebroid $N \times \mathfrak{g}$ such that $\nabla$ is its canonical flat connection and $N =W$ is a vector space, also, $\delta_\varepsilon A^a$ are then of the form as in the standard formulation of gauge theory with respect to a constant frame $\mleft( e_a \mright)_a$, as does $\delta_\varepsilon F^a$.
