--- a/FieldRedefinition/FieldRedefinition.tex
+++ b/FieldRedefinition/FieldRedefinition.tex
@@ -3614,8 +3614,8 @@ R_{\nabla_\rho}
 \eas
 \end{proof}
 
-Therefore one can view the negative of the torsion of the basic connection as a canonical choice for $\zeta$ along the foliation of the anchor. 
-In case we decide to take $\zeta \in \Omega^2(N;E)$ such that $\zeta \circ (\rho, \rho) = - t_{\nabla^{\mathrm{bas}}}$, we get:
+Therefore one can view the negative of the torsion of the basic connection as a possible choice for $\zeta$ along the foliation of the anchor; however, this may not always be possible because one has to lift the anchor. For example, if $\rho \equiv 0$, then $0 = \zeta \circ (\rho, \rho) = - t_{\nabla^{\mathrm{bas}}} = t_{\nabla_\rho} = [\cdot, \cdot]_E$ would imply an abelian structure on $E$. 
+In fact, if we can choose $\zeta \in \Omega^2(N;E)$ such that $\zeta \circ (\rho, \rho) = - t_{\nabla^{\mathrm{bas}}}$, we get:
 
 \begin{corollaries}{Certain classical CYMH GTs implying an abelian structure}{ClassicalTheoriesAreAbelianWithCanonicalChoices}
 Let us have the same setup and notation as in Thm.~\ref{thm:FinallyTheGaugeInvarianceWeWant}, \textit{i.e.}~let us assume a CYMH GT. Moreover, assume we have $\zeta \circ (\rho, \rho) = - t_{\nabla^{\mathrm{bas}}}$ and that $N$ is simply connected.
